<resources>
    <string name="app_name">AIUB Forum</string>
    <string name="no_title">No Title</string>
    <string name="short_description">short Description</string>
    <string name="image">Image</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="hi_i_am_using_one_chat">hi_i_am_using_one_chat</string>
    <string name="display_name">Display Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="description">Description</string>
    <string name="file_upload">Select File</string>
    <string name="submit">Submit</string>
    <string name="upload_pic">Select Pic</string>
    <string name="post_title">Title</string>
    <string name="image_selected">Image Selected:</string>
    <string name="file_selected">File Selected:</string>
    <string name="time">Time</string>
    <string name="reply">Reply</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
</resources>
