<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zunay.aiubforum.PostingActivity">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="5">


        <EditText
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:hint="@string/post_title"
            android:layout_weight="1"/>



        <TextView
            android:id="@+id/descriptionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:layout_weight="2"/>


        <ImageView
            android:id="@+id/previewImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:layout_weight="1"
             />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/selectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_pic"
                android:layout_weight="1" />
            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_weight="1" />

            <Button
                android:id="@+id/fileUploadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_upload"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pic_view_info"
            android:layout_margin="8dp"
            android:text="@string/image_selected"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pic_info"
            android:layout_margin="8dp"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/file_view_info"
            android:layout_margin="8dp"
            android:text="@string/file_selected"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/file_info"
            android:layout_margin="8dp"
            android:visibility="invisible"/>

    </LinearLayout>



</ScrollView>
